--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   api:
-    container_name: "composer-teste"
+    container_name: "compose-teste"
     build: .
     ports:
       - "8000:8000"
@@ -10,6 +10,10 @@ services:
     depends_on:
       - db
     tty: true
+    expose:
+      - 8000
+    environment: 
+      - SQLALCHEMY_DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
 
   db:
     image: postgres:14-alpine
@@ -22,4 +26,12 @@ services:
       - POSTGRES_HOST=localhost
     ports:
       - "5433:5432"
+    volumes:
+      - "./script.sql:/docker-entrypoint-initdb.d/init.sql"
+    expose:
+      - 5433
     tty: true
+
+networks: 
+  my_network: 
+    driver: bridge
